added minor changes
